vox/service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "vox",
    labels: {
      app: "vox",
    },
  },
  spec: {
    selector: {
      app: "vox",
    },
    ports: [{
      port: 8000,
      name: "http",
    }],
  },
}
